<resources>
    <string name="app_name">CP3406UtilityApp</string>
    <string name="top_songs">Top Songs</string>
    <string name="slogan">An app by Caleb Webster</string>
    <string name="get_songs">Get Songs</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="playlist_id_label">Playlist ID:</string>
    <string name="song_limit_label">Song Limit:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="rgb_mode">RGB Mode</string>
    <string name="limit_songs">Limit Songs</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="song_limit_hint">Enter song limit…</string>
    <string name="playlist_id_hint">Enter playlist ID…</string>
</resources>