<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlist_id_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_playlistId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/playlist_id_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#757575" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_limitSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/limit_songs"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_songLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/song_limit_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="#757575"
        android:visibility="gone" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_darkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dark_mode"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="saveSettings"
        android:text="@string/save"
        android:textSize="20sp"
        tools:ignore="UsingOnClickInXml"/>
</LinearLayout>